--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -152,7 +152,7 @@ commands:
             gcloud --quiet config set compute/zone $GCLOUD_COMPUTE_ZONE
             gcloud --quiet container clusters get-credentials ${<< parameters.cluster >>}
             find "k8s/config/${<< parameters.project >>}/" -type f -name '*.yaml' | while read line; do
-              kubectl apply -f k8s/config/${<< parameters.project >>}/$line
+              kubectl apply -f $line
             done
             source circle_ci_files/kubectl_deployment_directories
             :> new_deployments
