--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -151,9 +151,11 @@ commands:
             gcloud --quiet config set project ${<< parameters.project >>}
             gcloud --quiet config set compute/zone $GCLOUD_COMPUTE_ZONE
             gcloud --quiet container clusters get-credentials ${<< parameters.cluster >>}
-            find "k8s/config/${<< parameters.project >>}/" -type f -name '*.yaml' | while read line; do
-              kubectl apply -f $line
-            done
+            if [ -d "k8s/config/${<< parameters.project >>}" ]; then
+              find "k8s/config/${<< parameters.project >>}/" -type f -name '*.yaml' | while read line; do
+                kubectl apply -f $line
+              done
+            fi
             source circle_ci_files/kubectl_deployment_directories
             :> new_deployments
             perl_regexp_k8s_name_pattern='metadata:\n\s*name:\s*\K(\w+\-*\w*\s*\n)'
