--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -52,13 +52,15 @@ commands:
       - run:
           name: Install dependencies
           command: |
-            set -x
-            set -o nounset
-            pyenv local 3.7.0 2.7.12
-            python3 -m venv python3_venv
-            . python3_venv/bin/activate
-            pip install --upgrade pip
-            pip install -r requirements.txt
+            source circle_ci_files/docker_directories
+            cat circle_ci_files/changed_containers | while read container; do
+              echo "Installing dependencies for: $container from directory: ${docker_directories[$container]}"
+              cd ${docker_directories[$container]}
+              pyenv local 3.7.0 2.7.12
+              python3 -m venv python3_venv
+              . python3_venv/bin/activate
+              pip install --upgrade pip
+              pip install -r requirements.txt
       - save_cache:
           paths:
             - python3_venv
@@ -68,13 +70,16 @@ commands:
           command: |
             set -x
             set -o nounset
-            gcloud auth activate-service-account --key-file test-gcloud-service-key.json
-            gcloud --quiet auth configure-docker
-            pyenv local 3.7.0 2.7.12
-            . python3_venv/bin/activate
-            pip install .
-            sed -i -f circle_ci_files/sed_subber_docker_compose $(grep -oP "'--docker-compose'\s'\K([^']*)(?=')" pytest.ini)
-            pytest -m docker
+            source circle_ci_files/docker_directories
+            cat circle_ci_files/changed_containers | while read container; do
+              echo "Running pytest for: $container from directory: ${docker_directories[$container]}"
+              gcloud auth activate-service-account --key-file test-gcloud-service-key.json
+              gcloud --quiet auth configure-docker
+              pyenv local 3.7.0 2.7.12
+              . python3_venv/bin/activate
+              pip install .
+              sed -i -f circle_ci_files/sed_subber_docker_compose $(grep -oP "'--docker-compose'\s'\K([^']*)(?=')" pytest.ini)
+              pytest -m docker
   setup_nivatest:
     description: "A command to configure google cloud to use the nivatest-environment"
     steps:
