--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -35,8 +35,8 @@ commands:
             curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
 
             # Update the package list and install the Cloud SDK
-            sudo apt-get update && sudo apt-get install google-cloud-sdk
-            gcloud components install gke-gcloud-auth-plugin
+            sudo apt-get update && sudo apt-get install google-cloud-sdk, google-cloud-sdk-gke-gcloud-auth-plugin
+            gcloud components update
   setup_docker:
     description: "sets up remote docker with a pinned version"
     steps:
